# Digital-Camera-Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
